added features on banks

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/chart-of-accs.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/chart-of-accs.html
@@ -80,25 +80,13 @@
     <a class="amel-table-list-identifier">COA:</a>
 
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-   
-  <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
+  
   <a href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL A/Cs</a>
+  <a href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a>
+
+  
   <a href="{% url 'allifmaalcommonapp:commonAddChartofAccount' user_var glblslug %}">New Chart of A/C</a>
-   
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-    
-    </div>
-    </ul>
-  </div>
+  
   <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
  
   </div>
