--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/banks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/banks.html
@@ -37,7 +37,7 @@
     <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
     <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
     
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+  <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
 
 
   </div>
