--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
@@ -97,7 +97,7 @@
         </button>
         <ul class="dropdown-menu">
           <div class="side-navbar-dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonLoggedInUserDetails' user_var glblslug %}">Rights</a></li>
+            <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonLoggedInUserDetails' user_var glblslug %}">A/C Details</a></li>
   
           <li><a href="{% url 'allifmaalusersapp:userLogoutPage' %}"class="dropdown-item">Logout</a></li>
           
