--- a/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/coa-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/coa-search-pdf.html
@@ -7,24 +7,25 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div>
+<div class="allif_pdf_main_body_container">
+    <div class="allif_pdf_search_header">Chart of Accounts Search Results</div>
     <table class="table-bordered">
     <tr>
     <thead>
     <tr class="allif-pdf-table-header">
-    <th colspan="4">Code</th>
-    <th colspan="4">Description</th>
-    <th colspan="2" >Balance</th>
-    <th colspan="2">Category</th>
+    <th>Code</th>
+    <th>Description</th>
+    <th>Balance</th>
+    <th>Category</th>
     </tr>
     </thead>
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="4">{{item.code}}</td>
-    <td colspan="4">{{item.description}}</td>
-    <td colspan="2">{{item.balance|intcomma}}</td>
-    <td colspan="2"> {{item.category}}</td>
+    <td>{{item.code}}</td>
+    <td>{{item.description}}</td>
+    <td>{{item.balance|floatformat:2|intcomma}}</td>
+    <td> {{item.category}}</td>
     </tr>
     {% endfor %}
     </tbody>
