--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/logged-in-user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/logged-in-user-details.html
@@ -24,49 +24,15 @@
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     <div class="content-dropdown-menu">
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditUser' allifquery.id user_var glblslug %}">Edit User</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeUserToSupperuserByAdmin' allifquery.customurlslug %}">Supper User: {{allifquery.is_superuser}}</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeUserPasswordByAdmin' allifquery.customurlslug %}">Change Password By Admin</a></li>
+
       <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:changeYourUserPassword' %}">Change Password</a></li> 
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteUser' allifquery.id user_var glblslug %}">Delete User</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonStaffLedgerEntries' allifquery.id user_var glblslug %}">Ledger Entries</a></li> 
+     
      
    </div>
   </ul>
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
-<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
-<a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
-<a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">Staff</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Navigate
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a></li>
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a></li>
-    
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Banks
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-      </li>
-    <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+
 </div>
 
     </div><!--end....header column-->
@@ -265,7 +231,7 @@
        
     <tr data-id="{{item.id}}">
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanAddEditViewDelete' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if candoall == True %}
@@ -281,7 +247,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanAdd' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if canadd == True %}
@@ -297,7 +263,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanView' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if canview == True %}
@@ -313,7 +279,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanEdit' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if canedit == True %}
@@ -329,7 +295,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanDelete' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if candelete == True %}
@@ -345,7 +311,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanAccessAll' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if usr_can_access_all == True %}
@@ -361,7 +327,7 @@
       
       </td>
       <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserCanAccessRelated' allifquery.id user_var glblslug %}">
+        <a href="">
         <div class="form-check">
           
           {% if usr_can_access_related == True %}
