--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/add-supplier.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/add-supplier.html
@@ -34,9 +34,9 @@
 
 
   <div class="allifmaincontainer">
-
+{% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Supplier</div>
+  <div class="table-details-content-description">Edit {{allifquery_update}} Supplier</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -169,6 +169,127 @@
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
+{% else %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add New Supplier</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+            <tr>
+              <td class="allif-fix-table-col">Name</td>
+              <td>{{form.name}}</td>
+          
+              </tr>
+           
+              <tr>
+                <td class="allif-fix-table-col">Phone</td>
+                <td>{{form.phone}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Address</td>
+                  <td>{{form.address}}</td>
+              
+                  </tr>
+                 
+                    <tr>
+                      <td class="allif-fix-table-col">Balance</td>
+                      <td>{{form.balance}}</td>
+                  
+                      </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+                <tr>
+                  <td class="allif-fix-table-col">Email</td>
+                  <td>{{form.email}}</td>
+              
+                  </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">City</td>
+                    <td>{{form.city}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Country</td>
+                      <td>{{form.country}}</td>
+                  
+                      </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Contact</td>
+                        <td>{{form.contact}}</td>
+                    
+                        </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+      <tr>
+        <td class="allif-fix-table-col">Turnover</td>
+        <td>{{form.turnover}}</td>
+    
+        </tr>
+             
+
+
+    <tr>
+      <td class="allif-fix-table-col">Balance</td>
+      <td>{{form.balance}}</td>
+  
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+{% endif %}
 
 
 
