--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supsearchpdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supsearchpdf.html
@@ -7,24 +7,25 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div>
+<div class="allif_pdf_main_body_container">
+    <div class="allif_pdf_search_header">Suppliers Search Results</div>
     <table class="table-bordered">
     <tr>
     <thead>
     <tr class="allif-pdf-table-header">
-    <th colspan="4">Code</th>
-    <th colspan="4">Description</th>
-    <th colspan="2" >Balance</th>
-    <th colspan="2">Category</th>
+    <th>Supplier</th>
+    <th>Address</th>
+    <th>Owner</th>
+    <th>Date</th>
     </tr>
     </thead>
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="4">{{item.code}}</td>
-    <td colspan="4">{{item.description}}</td>
-    <td colspan="2">{{item.balance|intcomma}}</td>
-    <td colspan="2"> {{item.category}}</td>
+    <td>{{item.name}}</td>
+    <td>{{item.address}}</td>
+    <td>{{item.owner}}</td>
+    <td> {{item.date|date:'d/m/Y'}}</td>
     </tr>
     {% endfor %}
     </tbody>
