--- a/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/class-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/class-details.html
@@ -32,7 +32,7 @@
 
 <a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
 <a href="{% url 'allifmaalcommonapp:commonClasses' user_var glblslug %}">Classes</a>
-<a href="{% url 'allifmaalcommonapp:commonAddClass' user_var glblslug %}">Add New</a>
+<a href="{% url 'allifmaalcommonapp:commonAddClass' user_var glblslug %}">Add New Class</a>
 
 
 </div>
