--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payments.html
@@ -98,6 +98,7 @@
     <a href="{% url 'allifmaalcommonapp:commonPostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a>
     
     <a href="{% url 'allifmaalcommonapp:commonPaySupplierDirect' user_var glblslug %}">New Supplier Payment</a>
+    <a href="{% url 'allifmaalcommonapp:commonCustomerPayments' user_var glblslug %}">Customer Payments</a>
 
   </div>
   
