--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stock-cats.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stock-cats.html
@@ -42,7 +42,7 @@
    
     <a href="{% url 'allifmaalcommonapp:commonAddStockCat' user_var glblslug %}">New Stock Category</a>
  
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+    <a href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
   </div>
   
       </div><!--end....header column-->
