--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/assets.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/assets.html
@@ -41,22 +41,9 @@
 
     <a href="{% url 'allifmaalcommonapp:commonAssetCategories' user_var glblslug %}">Asset Categories</a>
     <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddAsset' user_var glblslug %}">Add New</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddAsset' user_var glblslug %}">Add New Asset</a>
 
 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   </div>
   
       </div><!--end....header column-->
