--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customer_search_pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customer_search_pdf.html
@@ -8,24 +8,24 @@
 {%endblock%}
 {% block body %}
 <div class="allif_pdf_main_body_container">
-    <div class="allif_pdf_search_header">Stock Search Results</div>
+    <div class="allif_pdf_search_header">Customers Search Results</div>
     <table class="table-bordered">
     <tr>
     <thead>
     <tr class="allif-pdf-table-header">
-    <th>Part No</th>
-    <th>Category</th>
-    <th>Description</th>
-    <th>Quantity</th>
+    <th>Customer</th>
+    <th>Address</th>
+    <th>Owner</th>
+    <th>Date</th>
     </tr>
     </thead>
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td>{{item.partNumber}}</td>
-    <td>{{item.category}}</td>
-    <td>{{item.description}}</td>
-    <td> {{item.quantity|intcomma}}</td>
+    <td>{{item.name}}</td>
+    <td>{{item.address}}</td>
+    <td>{{item.owner}}</td>
+    <td> {{item.date|date:'d/m/Y'}}</td>
     </tr>
     {% endfor %}
     </tbody>
