--- a/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/add-class.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/education/classes/add-class.html
@@ -21,7 +21,7 @@
   <a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
   
     <a href="{% url 'allifmaalcommonapp:commonClasses' user_var glblslug %}">Classes</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddClass' user_var glblslug %}">Add New</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddClass' user_var glblslug %}">Add New Class</a>
  
 </div>
 
@@ -33,9 +33,9 @@
 
 
   <div class="allifmaincontainer">
-
+{% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Classes</div>
+  <div class="table-details-content-description">Edit New Classes</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -140,7 +140,96 @@
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
+{% else %}
 
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add New Classes</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+        <tr>
+          <td class="allif-fix-table-col">Form</td>
+          <td>{{form.form}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Name</td>
+            <td>{{form.name}}</td>
+        
+            </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        
+          <tr>
+            <td class="allif-fix-table-col">Size</td>
+            <td>{{form.size}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Contact</td>
+              <td>{{form.contact}}</td>
+          
+              </tr>
+          
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+          
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+{% endif %}
 
 
 
