--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier-directly.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier-directly.html
@@ -35,7 +35,7 @@
   <div class="allifmaincontainer">
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Direct Supplier Payment</div>
+  <div class="table-details-content-description">Process Supplier Payments</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -48,31 +48,23 @@
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
-       
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
         <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
+          <td class="allif-fix-table-col">Supplier</td>
+          <td>{{form.supplier}}</td>
       
           </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Pay From A/C</td>
-            <td>{{form.account}}</td>
-        
-            </tr>
-           
-             
+     
+              <tr>
+                <td class="allif-fix-table-col">Description</td>
+                <td>{{form.description}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Amount</td>
+              <td>{{form.amount}}</td>
           
+              </tr>   
+       
         </tbody>
         </table>
       </div>
@@ -86,28 +78,26 @@
        <table class="table table-layout">
         <tbody>
          
+          <tr>
+            <td class="allif-fix-table-col">Pay From A/C</td>
+            <td>{{form.account}}</td>
+        
+            </tr>
+             
             <tr>
-              <td class="allif-fix-table-col">Supplier</td>
-              <td>{{form.supplier}}</td>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.mode}}</td>
           
               </tr>
-         
-                  <tr>
-                    <td class="allif-fix-table-col">Description</td>
-                    <td>{{form.description}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Posting Status</td>
-                      <td>{{form.status}}</td>
-                  
-                      </tr>
-                     
-                      <tr>
-                        <td class="allif-fix-table-col">Amount</td>
-                        <td>{{form.amount}}</td>
-                    
-                        </tr>   
+            
+            
+          <tr>
+            <td class="allif-fix-table-col">Posting Status</td>
+            <td>{{form.status}}</td>
+        
+            </tr>
+            
+          
           </tbody>
           </table>
           </div>
@@ -121,12 +111,7 @@
        <table class="table table-layout">
         <tbody>
         
-            <tr>
-              <td class="allif-fix-table-col">Terms</td>
-              <td>{{form.mode}}</td>
           
-              </tr>
-            
               <tr>
                 <td class="allif-fix-table-col">Comments</td>
                 <td>{{form.comments}}</td>
