--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier.html
@@ -33,9 +33,9 @@
 
 
   <div class="allifmaincontainer">
-
+{% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Pay {{allifquery}}</div>
+  <div class="table-details-content-description">Edit Payment of <strong>{{allifquery_update}}</strong></div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -70,7 +70,11 @@
             <td>{{form.account}}</td>
         
             </tr>
-           
+            <tr>
+              <td class="allif-fix-table-col">Supplier</td>
+              <td>{{form.supplier}}</td>
+          
+              </tr>
              
           
         </tbody>
@@ -86,11 +90,7 @@
        <table class="table table-layout">
         <tbody>
          
-            <tr>
-              <td class="allif-fix-table-col">Supplier</td>
-              <td>{{form.supplier}}</td>
           
-              </tr>
          
                   <tr>
                     <td class="allif-fix-table-col">Description</td>
@@ -151,7 +151,107 @@
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
+{% else %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Make Payment To <strong>{{allifquery}}</strong></div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+        <tr>
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{form.description}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Amount</td>
+            <td>{{form.amount}}</td>
+        
+            </tr>   
+          <tr>
+            <td class="allif-fix-table-col">Pay From A/C</td>
+            <td>{{form.account}}</td>
+        
+            </tr>
+           
+     
+              
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+          
+                    <tr>
+                      <td class="allif-fix-table-col">Posting Status</td>
+                      <td>{{form.status}}</td>
+                  
+                      </tr>
+                     
+                     
+                        <tr>
+                          <td class="allif-fix-table-col">Terms</td>
+                          <td>{{form.mode}}</td>
+                      
+                          </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+           
+            
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+{% endif %}
 
 
 
