--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -30,7 +30,7 @@
 
 
   <div class="allifmaincontainer">
-
+{% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Stock Item</div>
   <form method='POST' action=''>{% csrf_token %}
@@ -178,7 +178,139 @@
 
 </div><!--end of main container of the page....-->
 
+{% else %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Stock Item</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      
+     
+    <tr>
+      <td class="allif-fix-table-col">Category</td>
+      <td>{{form.category}}</td>
+  
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col">Inventory A/C</td>
+        <td>{{form.inventory_account}}</td>
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col">Income A/C</td>
+        <td>{{form.income_account}}</td>
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col">Pay From A/C</td>
+        <td>{{form.expense_account}}</td>
+      </tr>
+      <tr>
+        <td class="allif-fix-table-col">Tax Rate</td>
+        <td>{{form.taxrate}}</td>
+      </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+              <tr>
+                <td class="allif-fix-table-col">Part Number</td>
+                <td>{{form.partNumber}}</td>
+            
+                </tr>
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
 
+            <tr>
+              <td class="allif-fix-table-col">Quantity</td>
+              <td>{{form.quantity}}</td>
+          
+              </tr>
+
+              <tr>
+                <td class="allif-fix-table-col">Buying Price</td>
+                <td>{{form.buyingPrice}}</td>
+            
+                </tr>
+
+                <tr>
+                  <td class="allif-fix-table-col">Unit Cost</td>
+                  <td>{{form.unitcost}}</td>
+              
+                  </tr>
+                  
+            
+                  
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Standard Cost</td>
+            <td>{{form.standardUnitCost}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Unit Price</td>
+              <td>{{form.unitPrice}}</td>
+          
+              </tr>
+          <tr>
+            <td class="allif-fix-table-col">Critical No.</td>
+            <td>{{form.criticalnumber}}</td>
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.comments}}</td>
+          </tr>
+
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+{% endif %}
 
 
 </div>
