alxamdulillah...finished Common App on 14th May 2025

--- a/allifmaaladminapp/templates/allifmaaladminapp/ui/ui1.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/ui/ui1.html
@@ -174,14 +174,14 @@ label:hover{
 
   </div>
   <div>
-  <a href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}" class="topnavlaptoplinks">1</a>
-  <a href="{% url 'allifmaalcommonapp:ui2' user_var glblslug %}" class="topnavlaptoplinks">2</a>
-  <a href="{% url 'allifmaalcommonapp:ui3' user_var glblslug %}" class="topnavlaptoplinks">3</a>
-  <a href="{% url 'allifmaalcommonapp:ui4' user_var glblslug %}" class="topnavlaptoplinks">4</a>
+  <a href="{% url 'allifmaaladminapp:ui1' user_var glblslug %}" class="topnavlaptoplinks">1</a>
+  <a href="{% url 'allifmaaladminapp:ui2' user_var glblslug %}" class="topnavlaptoplinks">2</a>
+  <a href="{% url 'allifmaaladminapp:ui3' user_var glblslug %}" class="topnavlaptoplinks">3</a>
+  <a href="{% url 'allifmaaladminapp:ui4' user_var glblslug %}" class="topnavlaptoplinks">4</a>
  
-  <a href="{% url 'allifmaalcommonapp:ui6' user_var glblslug %}" class="topnavlaptoplinks">6</a>
-  <a href="{% url 'allifmaalcommonapp:ui7' user_var glblslug %}" class="topnavlaptoplinks">7</a>
-  <a href="{% url 'allifmaalcommonapp:ui8' user_var glblslug %}" class="topnavlaptoplinks">8</a>
+  <a href="{% url 'allifmaaladminapp:ui6' user_var glblslug %}" class="topnavlaptoplinks">6</a>
+  <a href="{% url 'allifmaaladminapp:ui7' user_var glblslug %}" class="topnavlaptoplinks">7</a>
+  <a href="{% url 'allifmaaladminapp:ui8' user_var glblslug %}" class="topnavlaptoplinks">8</a>
  
   </div>
 </body>
