--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -46,16 +46,13 @@
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEmailsAndSMS' user_var glblslug %}">Comms</a></li>
        
         
-        <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}">UIs</a></li>
-        <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:product_list' %}">Products</a></li>
+        <li><a class="dropdown-item"href="{% url 'allifmaaladminapp:ui1' user_var glblslug %}">UIs</a></li>
+        <li><a class="dropdown-item"href="{% url 'allifmaaladminapp:product_list' %}">Products</a></li>
         
         
 
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminCustomerContacts' user_var glblslug %}">Contacts</a></li>
-        
-        <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}">UIs</a></li>
-        
-      
+    
         <div class="btn-group">
           <button class="side-nav-dropdown-btn dropdown-toggle" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
             My A/C
