--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/add-salary.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/add-salary.html
@@ -30,6 +30,7 @@
 
 
   <div class="allifmaincontainer">
+    {% if allifquery_update %}
 
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Staff Salary</div>
@@ -160,7 +161,117 @@
 
 </div><!--end of main container of the page....-->
 
+{% else %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add New Staff Salary</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      
+      <tr>
+        <td class="allif-fix-table-col">Staff</td>
+        <td>{{form.staff}}</td>
+    
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{form.description}}</td>
+      
+          </tr>
+      
+            <tr>
+              <td class="allif-fix-table-col">Amount To Pay</td>
+              <td>{{form.amount}}</td>
+          
+              </tr>
+      
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+     
+          <tr>
+            <td class="allif-fix-table-col">Salary Payable</td>
+            <td>{{form.salary_payable}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Pay From A/C</td>
+              <td>{{form.account}}</td>
+          
+              </tr>
+                 
+              
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{form.comments}}</td>
+          
+              </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+          <tr>
+            <td class="allif-fix-table-col">Mode</td>
+            <td>{{form.mode}}</td>
+        
+            </tr>
+           
+           
+              <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
+            
+                </tr>
+                
+          
+            
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+{% endif %}
 
 
 </div>
