--- a/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/add-job-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/add-job-details.html
@@ -35,7 +35,7 @@
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-<a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}">Purchase Orders</a>
+<a href="{% url 'allifmaalcommonapp:commonJobs' user_var glblslug %}">Jobs</a>
 
 
 </div>
