--- a/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/job-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/job-search-pdf.html
@@ -7,40 +7,27 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<style>
-    #allif-pdf-header{
-    font-size:2em;
-    color: #050eab;
-    float: right;
-    text-align: right;
-    margin: 0.4em;
-  }
-</style>
-
-<div id="allif-pdf-header">Searched Invoices Results</div>
-
-<div>
+<div class="allif_pdf_main_body_container">
+    <div class="allif_pdf_search_header">Job Search Results</div>
     <table class="table-bordered">
     <tr>
     <thead>
     <tr class="allif-pdf-table-header">
-    
-    <th colspan="4">Invoice Ref.</th>
-    <th colspan="4">Customer</th>
-    <th colspan="2">Amount</th>
-    <th colspan="2">Date</th>
+    <th>Job Ref.</th>
+    <th>Customer</th>
+    <th>Description</th>
+    <th>Date</th>
     </tr>
     </thead>
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="4">{{item.number}}</td>
-    <td colspan="4">{{item.customer}}</td>
-    <td colspan="2">{{item.total|floatformat:2|intcomma}}</td>
-    <td colspan="2"> {{item.date|date:'d/m/Y'}}</td>
+    <td>{{item.job_number}}</td>
+    <td>{{item.customer}}</td>
+    <td>{{item.description}}</td>
+    <td> {{item.date|date:'d/m/Y'}}</td>
     </tr>
     {% endfor %}
-   
     </tbody>
     </table>
         
