--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/add-customer-payment.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/add-customer-payment.html
@@ -19,7 +19,7 @@
 
   <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
   
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+  <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
   <a href="{% url 'allifmaalcommonapp:commonCustomerPayments' user_var glblslug %}">Customer Payments</a>
 
  
@@ -33,9 +33,9 @@
 
 
   <div class="allifmaincontainer">
-
+{% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Receive Customer Payments</div>
+  <div class="table-details-content-description">Receive Payment <strong>{{allifquery_update}}</strong></div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -70,9 +70,12 @@
             <td>{{form.account}}</td>
         
             </tr>
-           
-             
+            <tr>
+              <td class="allif-fix-table-col">Customer</td>
+              <td>{{form.customer}}</td>
           
+              </tr>
+           
         </tbody>
         </table>
       </div>
@@ -86,23 +89,24 @@
        <table class="table table-layout">
         <tbody>
          
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+        
+  
             <tr>
-              <td class="allif-fix-table-col">Customer</td>
-              <td>{{form.customer}}</td>
+              <td class="allif-fix-table-col">Posting Status</td>
+              <td>{{form.status}}</td>
           
               </tr>
-         
-                    <tr>
-                      <td class="allif-fix-table-col">Posting Status</td>
-                      <td>{{form.status}}</td>
-                  
-                      </tr>
-                     
-                      <tr>
-                        <td class="allif-fix-table-col">Amount</td>
-                        <td>{{form.amount}}</td>
-                    
-                        </tr>   
+              
+              <tr>
+                <td class="allif-fix-table-col">Amount</td>
+                <td>{{form.amount}}</td>
+            
+                </tr>   
           </tbody>
           </table>
           </div>
@@ -147,6 +151,104 @@
 
 </div><!--end of main container of the page....-->
 
+{% else %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Receive Money from <strong>{{customer}}</strong></div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+        <tr>
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{form.description}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Amount</td>
+            <td>{{form.amount}}</td>
+        
+            </tr>   
+
+         
+          
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Receipt To Acccount</td>
+            <td>{{form.account}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.mode}}</td>
+          
+              </tr>
+     
+        <tr>
+          <td class="allif-fix-table-col">Comments</td>
+          <td>{{form.comments}}</td>
+      
+          </tr>    
+                     
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+          <tr>
+            <td class="allif-fix-table-col">Posting Status</td>
+            <td>{{form.status}}</td>
+        
+            </tr>
+            
+            
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+{% endif %}
 
 
 
