--- a/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/statements/financial/p&l-statement.html
@@ -15,104 +15,10 @@
   <div class="col-md-12"><!--start....header column-->
   
   <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>  
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-          
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonJobs' user_var glblslug %}">Clear Search</a>
-          
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonJobSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-          <hr>
-          <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonJobs' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-            
-           {% endfor %}
-           
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalcommonapp:commonJobAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-        
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
-        </div>
-        <div>
-          <label>End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
-        </div>
 
-        <div>
-          <label>Start Value</label>
-          <input type="text" class="form-control" name="startvalue" placeholder="">
-        </div>
-        <div>
-          <label>End Value</label>
-          <input type="text" class="form-control" name="endvalue" placeholder="">
-        </div>
-        
-        
-        <div>
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
-  
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Jobs:</a>
+    <a class="amel-table-list-identifier">Profit & Loss:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-    <a href="{% url 'allifmaalcommonapp:commonNewJobs' user_var glblslug %}">New Job</a>
- 
- 
-   
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
-      
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+  
   </div>
   
       </div><!--end....header column-->
